unix/lang/tests/error/error_line_number.yab
#expect#---Error in error_line_number.yab, line 8:
#expect#---Error: syntax error
#expect#   this does not compute :-/
#expect#        ^~~~
#expect#---Error: Couldn't parse program
#expect#---Error: Program not executed

this does not compute :-/
